# GitHubIssueCollect

./: GitHubIssueCollect.cabal  README.md
src/: Main.hs
