name:                GitHubIssueCollect
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/dkpsk/GitHubIssueCollect
license:             BSD3
license-file:        LICENSE
author:              dkpsk
maintainer:          dkppsk@gmail.com
copyright:           Copyright: (c) 2016 dkpsk
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable GitHubIssueCollect
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, aeson, http-conduit, bytestring
